@@ -1,0 +1,1 @@
+ac_cv_func_setvbuf_reversed=no
