@@ -5,6 +5,9 @@ Changes in @VERSION@
       recipeTemplate configuration option. (bz #671, #1059)
     * Policy objects can now accept globs and brace expansions when
       specifying subtrees.
+    * Cross-compile builds now provide CONFIG_SITE files to enable
+      cross-compiling programs that require external site config
+      files.  The default site config files are included.
 
 Changes in 1.0.14:
   o Client Changes:
